@@ -9,7 +9,7 @@
  * Text Domain: woocommerce-payments
  * Domain Path: /languages
  * WC requires at least: 4.4
- * WC tested up to: 5.9.0
+ * WC tested up to: 6.0.0
  * Requires at least: 5.6
  * Requires PHP: 7.0
  * Version: 3.4.0
